# to-do-so

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.md  docker-compose.yml  package-lock.json  package.json  requirements.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: attachments.py  health.py  profiles.py  projects.py  subtasks.py  tasks.py  team_members.py
backend/app/core/: config.py  errors.py
backend/app/core/security/: __init__.py  jwt.py
backend/app/db/: attachments_repo.py  profiles_repo.py  projects_repo.py  subtasks_repo.py  supabase.py  tasks_repo.py  team_members_repo.py
backend/app/schemas/: attachment.py  auth.py  profile.py  project.py  subtask.py  task.py  team_member.py
backend/tests/: conftest.py  fakes.py  test_attachments.py  test_attachments_repo.py  test_health.py  test_jwt_verification.py  test_projects_crud.py  test_projects_repo.py  test_subtasks.py  test_subtasks_repo.py  test_tasks_auth.py  test_tasks_crud.py  test_tasks_filters.py  test_team_members.py  test_team_members_repo.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.mts  vitest.setup.ts
frontend/__tests__/: safe-path.test.ts  subtask-progress.test.tsx  task-sort.test.ts  (+3 more)
supabase/: README.md  backfill_profiles_nom.sql  config.toml
(+97 files in other folders)
