[project]
name = "to-do-so-backend"
version = "0.1.0"
description = "API FastAPI de la plateforme interne de suivi de taches (To-Do-So)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # [crypto] = `cryptography`, requise pour la verification ES256/RS256 (JWKS Supabase).
    "pyjwt[crypto]>=2.9",
    "supabase>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pre-commit>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# --- Formatage ---
[tool.black]
line-length = 100
target-version = ["py311"]

# --- Lint ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests necessitant un vrai projet Supabase de test (skippes par defaut ; activer avec TODOSO_RUN_DB_TESTS=1)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
